--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,19 +1,16 @@
 <resources>
-    <string name="app_name">authentication</string>
+    <string name="app_name">MainMenu</string>
+    <string name="hello">Hello</string>
+    <string name="user">User</string>
+    <string name="my_body">My body</string>
+    <string name="myth_busters">Myth Busters</string>
+    <string name="decision_making">Decision Making</string>
+    <string name="diseases">diseases</string>
+    <string name="gender_equality">Gender Equality</string>
+    <string name="safety_pregnancy">Safety/Pregnancy</string>
+    <string name="communication_intimacy">Communication/Intimacy</string>
+    <string name="puberty">Puberty</string>
+    <string name="chat_with_jimmy">Chat With Jimmy</string>
+    <string name="getting_to_know_my_body">Getting to know my body</string>
     <string name="login">Login</string>
-    <string name="log_into_your_account">Log into your account</string>
-    <string name="email">Email</string>
-    <string name="password">Password</string>
-    <string name="name">Name</string>
-    <string name="create_your_account">Create your account</string>
-    <string name="register">Register</string>
-    <string name="title_activity_main2">MainActivity2</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
-    <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
-
-
 </resources>
